--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "Matthis/eventing",
+    "version": "1.0",
     "require": {
         "php": ">=5.4.0",
         "illuminate/log": "~5.1",
