--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Matthis/eventing",
+    "name": "matthis/eventing",
     "version": "1.0",
     "require": {
         "php": ">=5.4.0",
