--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "matthis/eventing",
     "require": {
         "php": ">=5.4.0",
-        "illuminate/log": "~5.1",
-        "illuminate/events": "~5.1"
+        "illuminate/log": "5.0.*",
+        "illuminate/events": "5.0.*"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
