--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
     "name": "matthis/eventing",
     "require": {
-        "php": ">=5.5.0",
-        "illuminate/log": "5.0.*",
-        "illuminate/events": "5.0.*"
+        "php": ">=5.5.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
